replace productSold by field rather get from orderitem